apps/desktop/src-tauri/android_cargo_error_6.txt
   Compiling ring v0.17.14
   Compiling obscur_desktop_lib v0.3.6 (E:\Web Project\experimental-workspace\newstart\apps\desktop\src-tauri)
   Compiling rustls v0.23.36
   Compiling rustls-webpki v0.103.8
   Compiling tokio-rustls v0.26.4
   Compiling hyper-rustls v0.27.7
   Compiling reqwest v0.12.28
   Compiling tauri v2.9.5
   Compiling tauri-plugin-updater v2.9.0
   Compiling tauri-plugin-notification v2.3.3
   Compiling tauri-plugin-deep-link v2.4.6
warning: unused imports: `PhysicalPosition` and `PhysicalSize`
 --> src\lib.rs:5:23
  |
5 |     Emitter, Manager, PhysicalPosition, PhysicalSize, WebviewWindow, Window,
  |                       ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `window`
  --> src\lib.rs:67:26
   |
67 | async fn window_minimize(window: Window) -> Result<(), String> {
   |                          ^^^^^^ help: if this is intentional, prefix it with an underscore: `_window`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `window`
  --> src\lib.rs:75:26
   |
75 | async fn window_maximize(window: Window) -> Result<(), String> {
   |                          ^^^^^^ help: if this is intentional, prefix it with an underscore: `_window`

warning: unused variable: `window`
  --> src\lib.rs:83:28
   |
83 | async fn window_unmaximize(window: Window) -> Result<(), String> {
   |                            ^^^^^^ help: if this is intentional, prefix it with an underscore: `_window`

warning: unused variable: `window`
  --> src\lib.rs:91:23
   |
91 | async fn window_close(window: Window) -> Result<(), String> {
   |                       ^^^^^^ help: if this is intentional, prefix it with an underscore: `_window`

warning: unused variable: `window`
   --> src\lib.rs:100:30
    |
100 | async fn window_is_maximized(window: Window) -> Result<bool, String> {
    |                              ^^^^^^ help: if this is intentional, prefix it with an underscore: `_window`

warning: unused variable: `window`
   --> src\lib.rs:108:32
    |
108 | async fn window_set_fullscreen(window: Window, fullscreen: bool) -> Result<(), String> {
    |                                ^^^^^^ help: if this is intentional, prefix it with an underscore: `_window`

warning: unused variable: `fullscreen`
   --> src\lib.rs:108:48
    |
108 | async fn window_set_fullscreen(window: Window, fullscreen: bool) -> Result<(), String> {
    |                                                ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_fullscreen`

warning: unused variable: `window`
   --> src\lib.rs:116:31
    |
116 | async fn window_is_fullscreen(window: Window) -> Result<bool, String> {
    |                               ^^^^^^ help: if this is intentional, prefix it with an underscore: `_window`

warning: unused variable: `window`
   --> src\lib.rs:228:28
    |
228 | async fn save_window_state(window: WebviewWindow, app: tauri::AppHandle) -> Result<(), String> {
    |                            ^^^^^^ help: if this is intentional, prefix it with an underscore: `_window`

warning: unused variable: `app`
   --> src\lib.rs:228:51
    |
228 | async fn save_window_state(window: WebviewWindow, app: tauri::AppHandle) -> Result<(), String> {
    |                                                   ^^^ help: if this is intentional, prefix it with an underscore: `_app`

error[E0599]: no method named `show` found for struct `tauri::WebviewWindow<R>` in the current scope
   --> src\lib.rs:374:36
    |
374 |                     let _ = window.show();
    |                                    ^^^^ method not found in `tauri::WebviewWindow`

error[E0599]: no method named `set_focus` found for struct `tauri::WebviewWindow<R>` in the current scope
   --> src\lib.rs:375:36
    |
375 |                     let _ = window.set_focus();
    |                                    ^^^^^^^^^ method not found in `tauri::WebviewWindow`

warning: unused variable: `window`
   --> src\lib.rs:265:23
    |
265 | fn apply_window_state(window: &WebviewWindow, state: WindowState) {
    |                       ^^^^^^ help: if this is intentional, prefix it with an underscore: `_window`

warning: unused variable: `state`
   --> src\lib.rs:265:47
    |
265 | fn apply_window_state(window: &WebviewWindow, state: WindowState) {
    |                                               ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

For more information about this error, try `rustc --explain E0599`.
warning: `obscur_desktop_lib` (lib) generated 13 warnings
error: could not compile `obscur_desktop_lib` (lib) due to 2 previous errors; 13 warnings emitted
